dark mode and phone view fix

--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -90,7 +90,9 @@
         flex-direction: column;
         position: absolute;
         background-color: $secondary-color;
-        height: 100%;
+        min-height: 100vh;
+        max-height: 300vh;
+        height: auto;
         width: 100%;
         top: 0;
         left: 0;
