--- a/styles/style.css
+++ b/styles/style.css
@@ -118,7 +118,9 @@
           flex-direction: column;
   position: absolute;
   background-color: #2663FF;
-  height: 100%;
+  min-height: 100vh;
+  max-height: 300vh;
+  height: auto;
   width: 100%;
   top: 0;
   left: 0;
